fixed spacing issue in done button on glowup page

--- a/public/glowup.css
+++ b/public/glowup.css
@@ -28,13 +28,13 @@ ul {
 
 #look-image {
 	margin-top: 1%;
-	margin-bottom: 1%;
 	width: 150px;
 	height: 150px;
 	border: 1px solid black;
 }
 
 .step {
+	margin-top: 1%;
 	font-size: 16px;
 	margin-bottom: 3%;
 }
@@ -44,4 +44,5 @@ ul {
 	background-color: black;
 	width: 380px;
 	border-radius: 0;
+	margin-top: 7%;
 }
